force-app/main/default/objects/DomainInputOutput__mdt/DomainInputOutput__mdt.object-meta.xml
<CustomObject>
    <label>DomainInputOutput</label>
    <pluralLabel>DomainInputOutput</pluralLabel>
</CustomObject>