force-app/main/default/objects/DomainInputOutput__mdt/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <label>Abbreviation</label>
    <length>15</length>
    <type>Text</type>
</CustomField>