force-app/main/default/objects/DomainInputOutput__mdt/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <description>Type of data (Tipo de documento, tipo pessoa, etc)</description>
    <label>DataType</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>