force-app/main/default/objects/DomainInputOutput__mdt/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nationality</label>
    <length>50</length>
    <type>Text</type>
</CustomField>