force-app/main/default/objects/DomainInputOutput__mdt/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <description>i.e SALESFORCE, VIVONET, etc</description>
    <label>SourceSystem</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>