force-app/main/default/objects/DomainInputOutput__mdt/fields/SourceValue__c.field-meta.xml
<CustomField>
    <fullName>SourceValue__c</fullName>
    <label>SourceValue</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>