force-app/main/default/objects/DomainInputOutput__mdt/fields/TargetSystem__c.field-meta.xml
<CustomField>
    <fullName>TargetSystem__c</fullName>
    <label>TargetSystem</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>