force-app/main/default/objects/DomainInputOutput__mdt/fields/TargetValue__c.field-meta.xml
<CustomField>
    <fullName>TargetValue__c</fullName>
    <label>TargetValue</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>